--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "devsecops-lab",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,5 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xluisx14/devsecops-lab.git"
+  },
+  "bugs": {
+    "url": "https://github.com/xluisx14/devsecops-lab/issues"
+  },
+  "homepage": "https://github.com/xluisx14/devsecops-lab#readme",
+  "description": ""
 }
